[package]
version = "0.1.0"
name = "sovereign-script"
edition = "2021"
default-run = "sovereign"

[[bin]]
name = "sovereign"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = { version = "6.0.1", features = ["blocking", "native-gnark"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
sovereign-lib = { path = "../lib" }
dotenv = "0.15.0"
alloy-primitives = "1.5.7"

[build-dependencies]
sp1-build = { version = "6.0.1" }
